@@ -1,4 +1,4 @@
-/* $Id: wch.c,v 1.8.4.2.2.3 2009/08/25 04:00:16 uehira Exp $ */
+/* $Id: wch.c,v 1.8.4.2.2.4 2010/09/17 01:02:04 uehira Exp $ */
 /*
 program "wch.c"
 "wch" edits a win format data file by channles
@@ -27,7 +27,7 @@ program "wch.c"
 /* #define   DEBUG   0 */
 
 static char rcsid[] =
-  "$Id: wch.c,v 1.8.4.2.2.3 2009/08/25 04:00:16 uehira Exp $";
+  "$Id: wch.c,v 1.8.4.2.2.4 2010/09/17 01:02:04 uehira Exp $";
 
 static uint8_w *buf=NULL,*outbuf;
 static uint8_w ch_table[WIN_CHMAX];
@@ -108,7 +108,7 @@ read_data()
   int i;
 
   if(fread(&re,1,WIN_BSLEN,stdin)==0) return (0);
-  i=1;if(*(char *)&i) SWAPL(re);
+  i=1;if(*(char *)&i) SWAP32(re);
   if(buf==NULL)
     {
     buf=(uint8_w *)malloc(size=re*2);
